[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/general/level_icon.gd" type="Script" id=1]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player.gd" type="Script" id=2]
[ext_resource path="res://assets/map/level.png" type="Texture" id=3]
[ext_resource path="res://assets/sfx/select.flac" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[node name="level" type="Sprite"]
position = Vector2( 35, 105 )
texture = ExtResource( 3 )
script = ExtResource( 1 )

[node name="select" type="AudioStreamPlayer" parent="."]
bus = "sfx"
script = ExtResource( 2 )
samples = [ ExtResource( 4 ) ]
random_pitch_range = 0.05

[node name="area" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="area"]
shape = SubResource( 1 )

[connection signal="input_event" from="area" to="." method="_on_area_input_event"]
[connection signal="mouse_entered" from="area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="area" to="." method="_on_area_mouse_exited"]
